--- a/02 LM en entornos web/estilos10a.css
+++ b/02 LM en entornos web/estilos10a.css
@@ -1,29 +1,32 @@
 div {
 	width:100px;
 	height:100px;
-	margin:10px;
+	/* margin:10px; */
+	border: yellow 3px solid;
 }
 .caja1 {
 	border:2px solid red;
 	display:inline; /*convertir a block o quitar */
 }
 .caja2 {
-	border-right:2px solid red;
+	border:2px solid purple;
 	padding-right:60px;
 }
 .caja3 {
-	border-bottom:2px solid red;
-	border-right:2px solid red;
+	border: 2px blue solid;
+	/* border-bottom:2px solid red; */
+	/* border-right:2px solid red; */
 	display:inline-block;
 }
 .caja4 {
 	/*border-left:2px solid red;*/
-	border-left-color:red;
+	border-left-color:rgb(255, 170, 0);
 	border-left-style: dashed;
 	border-left-width:2px;	
 	display:inline-block;
-	padding-left:5px;
-	border-right-color:red;
+	/* padding-left: 15px; */
+	padding: 25px;
+	border-right-color:rgb(166, 255, 0);
 	border-right-style: dotted;
 	border-right-width: 20px;
 }
