--- a/unidad_05/22-03-23/Ejercicios/Ejercicio07.css
+++ b/unidad_05/22-03-23/Ejercicios/Ejercicio07.css
@@ -20,7 +20,7 @@
     border: 3px solid rgb(46, 14, 97);
     letter-spacing: 1px;
     font-size: 1.3rem;
-    margin: o auto;
+    margin: 0 auto;
   }
   caption {
     padding: 10px;
